# map-captioning

./: .env.example  README.md  dvc.yaml  params.yaml  pyproject.toml
data/prompt_template/: complex.txt
data/prompt_template/captioning/: basic.txt  complex.txt
data/prompt_template/evaluation/: basic.txt  complex.txt
eda/evaluation/: example.ipynb
eda/inference/: ollama.ipynb  vertexai.ipynb
eda/interference/: ollama.ipynb  openai.ipynb  vertexai.ipynb
eda/results/: explore.ipynb
eda/results/evaluated/: explore.ipynb
eda/results/output/: explore.ipynb
eda/results/preprocessed/: explore.ipynb
eda/results/presentation/: postprocessing.ipynb
src/: caption_evaluation.py  caption_generation.py  captioning.py  data_collection.py  data_preprocessing.py  dataset_download.py  dataset_downloading.py  downloading.py  evaluation.py  preprocessing.py
src/llms/providers/: __init__.py  base.py  ollama.py  openai.py  vertexai.py
src/ui/: app.py  test.py
